5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4072/executions/1643_1053.log
== TEST (2019-04-15 12:27:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono == input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + ("eh pratrono do harry")
else:
	mensagem = patrono + ("nao eh patrono do harry")
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    patrono == input()
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:27:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + ("eh pratrono do harry")
else:
	mensagem = patrono + ("nao eh patrono do harry")
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    patrono == input()
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:27:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + ("eh pratrono do harry")
else:
	mensagem = patrono + (" nao eh patrono do harry")
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    patrono == input()
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:28:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono:  ")

if (patrono == "cervo"):
	mensagem = patrono + ("eh pratrono do harry")
else:
	mensagem = patrono + ("nao eh patrono do harry")
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    patrono == input()
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:28:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono:  ")

if (patrono == "cervo"):
	mensagem = patrono + ("eh pratrono do harry")
else:
	mensagem = patrono + (" nao eh patrono do harry")
	print(mensagem)
-- EXECUTION TIME:
0.184226
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:28:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + ("eh pratrono do harry")
else:
	mensagem = patrono + (" nao eh patrono do harry")
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    patrono == input()
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:29:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + ("eh pratrono do harry")
else:
	mensagem = patrono + (" nao eh patrono do harry")
	print(mensagem)
-- EXECUTION TIME:
0.163463
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:29:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + ("eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")
	print(mensagem)
-- EXECUTION TIME:
0.158022
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:29:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + ("eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    patrono == input()
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:30:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    patrono == input()
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:31:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    patrono == input()
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:31:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")
	print(mensagem)
-- EXECUTION TIME:
0.153518
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:31:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- OUTPUT:
cervo eh pratrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:32:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- EXECUTION TIME:
0.140482
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:32:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- OUTPUT:
cervo eh pratrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:32:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- EXECUTION TIME:
0.226628
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:33:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- OUTPUT:
cervo eh pratrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:33:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- EXECUTION TIME:
0.207684
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:33:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite patrono: ")

if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- OUTPUT:
cervo eh pratrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:35:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("digite patrono: ")
if (frase == "cervo"):
	mensagem = (" eh pratrono do Harry Potter")
else:
	mensagem = frase + (" nao eh patrono do Harry Potter")

print(mensagem)
-- OUTPUT:
eh pratrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:35:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("digite patrono: ")
if (frase == "cervo"):
	mensagem = (" eh pratrono do Harry Potter")
else:
	mensagem = frase + (" nao eh patrono do Harry Potter")

print(mensagem)
-- EXECUTION TIME:
0.152312
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh pratrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:36:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("digite patrono: ")
if (frase == "cervo"):
	mensagem = (" eh pratrono do Harry Potter")
else:
	mensagem = frase + (" nao eh patrono do Harry Potter")

print(mensagem)
-- OUTPUT:
eh pratrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:37:12) 
-- CODE:
frase = input("digite o patrono")
if (frase == "cervo"):
	mensagem = (" eh pratrono do Harry Potter")
else:
	mensagem = frase + (" nao eh patrono do Harry Potter")

print(mensagem)
-- OUTPUT:
eh pratrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:37:22) 
-- CODE:
frase = input("digite o patrono")
if (frase == "cervo"):
	mensagem = (" eh pratrono do Harry Potter")
else:
	mensagem = frase + (" nao eh patrono do Harry Potter")

print(mensagem)
-- EXECUTION TIME:
0.188856
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh pratrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:38:12) 
-- CODE:
patrono = input("digite o patrono")
if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- OUTPUT:
cervo eh pratrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:38:26) 
-- CODE:
patrono = input("digite o patrono")
if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- EXECUTION TIME:
0.169214
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:39:33) 
-- CODE:
patrono = input("digite o patrono: ")
if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- EXECUTION TIME:
0.153169
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh pratrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:39:38) 
-- CODE:
patrono = input("digite o patrono: ")
if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- OUTPUT:
cervo eh pratrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:39:52) 
-- CODE:
patrono = input("digite o patrono: ")
if (patrono == "cervo"):
	mensagem = patrono + (" eh pratrono do Harry Potter")
else:
	mensagem = patrono + (" nao eh patrono do Harry Potter")

print(mensagem)
-- OUTPUT:
cervo eh pratrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
